# Changelog
Todas as alterações significativas ao CatecheSis são registadas aqui.


## [Versão 2.2.0] - 2024-02-13

#### Novidades:
- Notificação de atualização disponível;
- Assistente de atualização automática;

#### Melhorias de usabilidade:
- Melhorada mensagem na página *Gerir grupos de catequese* quando não existem anos catequéticos;
- Geração automática do ficheiro `.htaccess` durante a instalação. A instalação é agora completamente automática;

#### Correções:
- A configuração do CHARACTER SET e COLLATION da base de dados não era executada corretamente em algumas versões mais recentes do servidor MySQL;
- Assistente de Instalação agora permite reiniciar uma instalação mesmo após ter atingido a última etapa;
- Corrigido bug que afetava alguns sistemas na criação de novo ano catequético;
- Removida funcionalidade de videochamadas Jitsi devido a [alterações na política de utilização do serviço](https://jitsi.org/blog/authentication-on-meet-jit-si/) alheias ao CatecheSis;
- Corrigidas posições nas caixas nas fichas de pré-inscrição geradas em .docx;



## [Versão 2.1.0] - 2023-05-01

#### Novidades:
- Configurações regionais: suporte para códigos postais, números de telefone e calendário de anos catequéticos de Portugal e Brasil; 

#### Melhorias de usabilidade:
- Melhorada nomenclatura e comportamento do campo _último catecismo frequentado_ das páginas de inscrição/renovação de matrícula, para evitar erros de preenchimento;
- Melhoradas as recomendações de catecismos com base na idade do candidato e no último catecismo frequentado;
- Funcionalidade _Reprografia_ renomeada para _Área de Impressão_;


## [Versão 2.0.1] - 2022-09-01

#### Correções:
- Corrigidos links na documentação;


## [Versão 2.0.0] - 2022-08-28

#### Novidades:
- O CatecheSis torna-se _open-source_ :)
- Novos manuais de utilizador e de instalação;
- Introduzido link para a comunidade no Discord, no menu de ajuda;