@@ -39,8 +39,17 @@
 
   <div style="margin-bottom: 40px;"></div>
 
+  <h2 id="versão-2.2.1---2024-02-13">[Versão 2.2.1] - 2024-02-13</h2>
+  <h4><img src="img/bug_transparent_icon.png"> Correções:</h4>
+  <ul class="incremental">
+    <li>Corrigido bug que provocava erro fatal (array nulo) em alguns sistemas;</li>
+  </ul>
 
-  <h2 id="versão-2.2.0---2024-02-12">[Versão 2.2.0] - 2024-02-13</h2>
+
+  <hr>
+
+
+  <h2 id="versão-2.2.0---2024-02-13">[Versão 2.2.0] - 2024-02-13</h2>
   <h4><img src="img/magic_wand_transparent_icon.png"> Novidades:</h4>
   <ul class="incremental">
     <li>Notificação de atualização disponível;</li>
