@@ -1,6 +1,6 @@
 <?php
 
-const VERSION_STRING = '2.2.0';
+const VERSION_STRING = '2.2.1';
 const VERSION_RELEASE_DATE = '13-02-2024';
 
 ?>
